# larentals

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.chainguard  L.A. County rental listings 4-28-2025 - Renter Report4-28-25.csv  L.A. County rental listings 5-12-2025 - Renter Report5-12-25.csv  L.A. County rental listings 5-19-2025 - Renter Report 5-19-25.csv  L.A. County rental listings 5-27-2025 - Renter Report 5-27-25.csv  L.A. County rental listings 5-6-2025 - Renter Report 5-6-2025.csv  L.A. County rental listings 6-2-2025 - Renter Report 6-2-2025.csv  LA County Homes 4-28-25.xlsx  LA County Homes 5-12-25.xlsx  LA County Homes 5-19-2025.xlsx  LA County Homes 5-27-2025.xlsx  LA County Homes 5-6-25.xlsx  LICENSE.txt  README.md  app.py  aws_ec2_user_data_script.sh  buy.pickle  buy_dataframe.py  dataframe.hdf5  dataframe.pickle  dataframe.py  docker-compose.valhalla.yml  forsale_dataframe.py  functions.py  larentals.csv  larentals.py  lease.json  lease_dataframe.py  pyproject.toml  rental_dataframe.py  requirements.txt  sqlite.py  test.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot-auto-merge.yml  dependabot-verify.yml  (+5 more)
api/: __init__.py  isp.py  listings.py  report_listing.py
assets/: additional_layer_popups.js  dashExtensions_default.js  dash_leaflet_popup_style.css  map_gesture_controls.css  more_info.css  more_info.js  oil.js  popup.js  style.css  us-cities.json
data/: README.md
datasets/: buy.parquet  buy.pickle  lease.parquet
functions/: alpr_cameras.py  aws_functions.py  broadband_spatial_merge_utils.py  broadband_utils.py  commute_utils.py  convex_hull.py  data_paths.py  dataframe_utils.py  devtools.py  geocoding_utils.py  geojson_processing_utils.py  geopy.py  howloud.py  imagekit.py  lahd.py  lahd_records_ui.py  layers.py  listing_enrichment_utils.py  listing_report_utils.py  mcp_docs_ui.py  mcp_listings.py  mcp_usage_logging.py  mls_image_processing_utils.py  noise_level_utils.py  normalization_utils.py  parking_tickets.py  popup_utils.py  rso.py  secrets.py  seo.py  source_map_logging.py  sql_helpers.py  webscraping_utils.py  wildfire_damage.py  zimas_utils.py  zip_geocoding_utils.py
pages/: LA County Homes 1-5-2026.xlsx  LA County Homes 6-16-2025.xlsx  Renter Report 1-5-26 - Renter Report1-5-2025.csv  __init__.py  buy_components.py  buy_page.py  component_base.py  component_factories.py  component_models.py  components.py  filters.py  for-lease.py  for-rent.py  for-sale.py  lease_components.py  lease_page.py  mcp_page.py
pipelines/: L.A. County Rental Listings 1-19-2026 - Renter Report 1-19-2026.csv  L.A. County Rental Listings 10-13-2025 - Renter Report 10-13-25.csv  L.A. County Rental Listings 10-20-2025 - Renter Report 10-20-25.csv  L.A. County Rental Listings 10-6-2025 - Renter Report 10-6-25.csv  L.A. County Rental Listings 11-10-2025 - Renter Report 11-11-2025.csv  L.A. County Rental Listings 11-17-2025 - Renter Report 11-17-25.csv  L.A. County Rental Listings 11-24-2025 - renter report 11-24-25.csv  L.A. County Rental Listings 11-3-2025 - Renter Report 11-3-2025.csv  L.A. County Rental Listings 12-1-2025 - Renter Report 12-1-2025.csv  L.A. County Rental Listings 12-15-2025 - Renter Report 12-15-25.csv  L.A. County Rental Listings 12-22-2025 - Renter Report 12-22-2025.csv  L.A. County Rental Listings 12-8-2025 - Renter Report 12-8-2025.csv  L.A. County Rental Listings 6-15-2026 - Renter Report 6-15-26.csv  L.A. County Rental Listings 6-29-2026 - Renter Report 6-29-26.csv  L.A. County Rental Listings 7-13-2026 - Renter Report 7-13-2026.csv  L.A. County Rental Listings 7-20-2026 - Renter Report 7-20-2026.csv  L.A. County Rental Listings 7-6-2026 - Renter Report 7-6-2026.csv  L.A. County Rental Listings 9-15-2025 - Renter Report 9-15-2025.csv  L.A. County Rental Listings 9-22-2025 - Renter Report 9-22-2025.csv  L.A. County Rental Listings 9-29-2025 - rentalreport 9-29-25.csv  L.A. County Rental Listings 9-8-2025 - Renter Report9-8-25.csv  L.A. County rental listings 6-16-2025 - Renter Report 6-16-25.csv  L.A. County rental listings 6-23-2025 - Renter Report 6-23-25.csv  L.A. County rental listings 6-9-2025 - Renter Report 6-9-25.csv  L.A. County rental listings 7-21-2025 - Renter Report 7-21-2025.csv  L.A. County rental listings 7-28-2025 - Renter Report 7-28-2025.csv  L.A. County rental listings 8-11-2025 - Renter Report 8-11-2025.csv  L.A. County rental listings 8-18-2025 - Renter Report8-18-2025.csv  L.A. County rental listings 8-25-2025 - Weekly Renter report-8-25-25.csv  L.A. County rental listings 8-4-2025 - Renterreport8-5-2025.csv  L.A. County rental listings 9-1-2025 - Renter Report9-1-25.csv  LA County Homes 1-12-2026.xlsx  LA County Homes 1-19-2026.xlsx  LA County Homes 1-25-2026.xlsx  LA County Homes 10-27-2025 - Renter Report 10-27-25.csv  LA County Homes 12-15-2025.xlsx  LA County Homes 12-22-2025.xlsx  LA County Homes 12-8-2025.xlsx  LA County Homes 2-2-2026.xlsx  LA County Homes 2-23-2026.xlsx  (+40 more)
scripts/: __init__.py  aws_ec2_user_data_script.sh  build_breakfast_burritos_geojson.py  build_lahd_property_heatmap.py  build_lahd_property_lookup.py  build_parking_tickets_heatmap.py  build_rso_property_lookup.py  build_school_layer_geojson.py  build_service_area_zip_geojson.py  build_supermarkets_geojson.py  cloudwatch.json  download_gtfs_feeds.py  enrich_fire_hazard.py  enrich_schools.py  fetch_alpr_cameras.py  fetch_cpuc_broadband_geopackage.py  init_listing_enrichment_tables.py  normalize_lease_terms.py  pipelines_no_sampling.sh  run_broadband_merge.py
test-results/: .last-run.json
tests/: test_alpr_cameras.py  test_build_service_area_zip_geojson.py  test_commute_utils.py  test_component_base.py  test_component_smoke.py  test_dash_mcp.py  test_drop_high_outliers.py  test_fetch_cpuc_broadband_geopackage.py  test_lahd_records.py  test_layers.py  test_listing_enrichment.py  test_mcp_docs_ui.py  test_mcp_listings.py  test_mcp_usage_logging.py  test_plausible_events.py  test_rso.py  test_seo.py  test_source_map_logging.py  test_theme_toggle.py  test_webscraping_utils.py  test_zip_geocoding_utils.py
(+85 files in other folders)
