[project]
name        = "WhereToLive.LA"
version     = "1.2.0"
description = "An interactive map of available rentals and for-sale properties in Los Angeles County. Updated weekly."             
readme      = "README.md"
license     = { text = "All rights reserved" }
requires-python = ">=3.13,<3.14"

dependencies = [
  "beautifulsoup4~=4.15.0",
  "bleach~=6.4.0",
  "boto3~=1.43.50",
  "brotli~=1.2.0",
  "dash-ag-grid>=35.3.0",
  "dash-bootstrap-components~=2.0.4",
  "dash-extensions~=2.0.6",
  "dash-iconify>=0.1.2",
  "dash-leaflet~=1.1.3",
  "dash-mantine-components~=2.8.0",
  "dash~=4.4.1",
  "flask-compress>=1.23",
  "flask~=3.1.3",
  "geopandas~=1.1.4",
  "geopy~=2.5.0",
  "gevent~=26.5.0",
  "gunicorn~=26.0.0",
  "imagekitio==4.2.0",
  "loguru~=0.7.3",
  "numpy~=2.5.1",
  "openpyxl~=3.1.5",
  "orjson~=3.11.9",
  "pandas~=3.0.5",
  "protobuf~=7.35.1",
  "pyarrow~=25.0.0",
  "python-dotenv~=1.2.2",
  "pyyaml~=6.0.3",
  "requests~=2.34.2",
  "user-agents~=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=9.1.1",
]

[project.scripts]
wheretolive-la = "app:main"
buy-dataframe = "pipelines.buy_dataframe:main"
lease-dataframe = "pipelines.lease_dataframe:main"
build-breakfast-burritos-geojson = "scripts.build_breakfast_burritos_geojson:main"
build-school-layer-geojson = "scripts.build_school_layer_geojson:main"
build-service-area-zip-geojson = "scripts.build_service_area_zip_geojson:main"
enrich-schools = "scripts.enrich_schools:main"
build-parking-tickets-heatmap = "scripts.build_parking_tickets_heatmap:main"
build-lahd-property-heatmap = "scripts.build_lahd_property_heatmap:main"
build-lahd-property-lookup = "scripts.build_lahd_property_lookup:main"
build-rso-property-lookup = "scripts.build_rso_property_lookup:main"
build-supermarkets-geojson = "scripts.build_supermarkets_geojson:main"
init-listing-enrichment-tables = "scripts.init_listing_enrichment_tables:main"
normalize-lease-terms = "scripts.normalize_lease_terms:main"
run-broadband-merge = "scripts.run_broadband_merge:main"
fetch-cpuc-broadband-geopackage = "scripts.fetch_cpuc_broadband_geopackage:main"
fetch-alpr-cameras = "scripts.fetch_alpr_cameras:main"

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["api", "functions", "pages", "pipelines", "scripts"]
